--- a/cart--empty.html
+++ b/cart--empty.html
@@ -197,28 +197,28 @@
       <section class="empty_cart wrapper--global">
         <h1 class="empty_cart__heading">Ваша корзина пуста</h1>
         <img class="empty_cart__image" src="./images/cart--empty.svg" />
-        <a class="empty_cart__button button button--black" href="#">За покупками!</a>
+        <a class="empty_cart__button button button--black" href="../catalogue.html">За покупками!</a>
       </section>
 
       
       <section class="sets section wrapper--global">
         <div class="sets__container">
-          <a class="sets__container__item" href="#">
+          <a class="sets__container__item" href="../catalogue--level2.html">
             <span class="sets__container__item__title">Красота</span>
             <img class="sets__container__item__image" src="./images/main-sets/beauty.png" />
             <img class="sets__container__item__image--hover" src="./images/main-sets/beauty-hover.png" />
           </a>
-          <a class="sets__container__item" href="#">
+          <a class="sets__container__item" href="../catalogue--level2.html">
             <span class="sets__container__item__title">Для геймеров</span>
             <img class="sets__container__item__image" src="./images/main-sets/gamers.png" />
             <img class="sets__container__item__image--hover" src="./images/main-sets/gamers-hover.png" />
           </a>
-          <a class="sets__container__item" href="#">
+          <a class="sets__container__item" href="../catalogue--level2.html">
             <span class="sets__container__item__title">Спортсменам</span>
             <img class="sets__container__item__image" src="./images/main-sets/sport.png" />
             <img class="sets__container__item__image--hover" src="./images/main-sets/sport-hover.png" />
           </a>
-          <a class="sets__container__item" href="#">
+          <a class="sets__container__item" href="../catalogue--level2.html">
             <span class="sets__container__item__title">Музыка</span>
             <img class="sets__container__item__image" src="./images/main-sets/music.png" />
             <img class="sets__container__item__image--hover" src="./images/main-sets/music-hover.png" />
@@ -266,34 +266,34 @@
           <span class="footer__navigation__catalogue__heading footer__heading">Каталог</span>
           <ul class="footer__navigation__catalogue__menu footer__menu">
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Бытовая техника</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Бытовая техника</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Компьютеры и ноутбуки</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Компьютеры и ноутбуки</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Красота и здоровье</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Красота и здоровье</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Аудиотехника</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Аудиотехника</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Аксессуары для гаджетов</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Аксессуары для гаджетов</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Смартфоны и гаджеты</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Смартфоны и гаджеты</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Развлечения и хобби</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Развлечения и хобби</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Телевизоры и аксессуары</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Телевизоры и аксессуары</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Фото и видео</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Фото и видео</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Туризм</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Туризм</a>
             </li>
           </ul>
         </div>
@@ -301,16 +301,16 @@
           <span class="footer__navigation__help__heading footer__heading">Помощь</span>
           <ul class="footer__navigation__help__menu footer__menu">
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Доставка</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../delivery.html">Доставка</a>
             </li>
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Самовывоз</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../pickup.html">Самовывоз</a>
             </li>
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Гарантия</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../guarantee.html">Гарантия</a>
             </li>
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Контакты</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
@@ -318,13 +318,13 @@
           <span class="footer__navigation__about__heading footer__heading">О нас</span>
           <ul class="footer__navigation__about__menu footer__menu">
             <li class="footer__navigation__about__menu__item">
-              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="#">ТехноЗум</a>
+              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="../about.html">ТехноЗум</a>
             </li>
             <li class="footer__navigation__about__menu__item">
-              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="#">Реквизиты</a>
+              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="../rekvizity.html">Реквизиты</a>
             </li>
             <li class="footer__navigation__about__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Оферта</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../oferta.html">Оферта</a>
             </li>
           </ul>
         </div>
@@ -333,7 +333,7 @@
         <div class="footer__credentials__essentials">ИНН 781021149839, ОГРНИП 322784700130448</div>
         <div class="footer__credentials__copyright">Технозум.рф &copy; 2024</div>
         <div class="footer__credentials__link">
-          <a class="footer__credentials__link__policy" href="#">Политика конфиденциальности</a>
+          <a class="footer__credentials__link__policy" href="../oferta.html">Политика конфиденциальности</a>
         </div>
       </div>
     </footer>
@@ -351,12 +351,12 @@
         <span class="popup_cart__container__close icon--close" onclick="closeDialog()"></span>
         <div class="popup_cart__container__product">
           <div class="popup_cart__container__product__images">
-            <a class="popup_cart__container__product__images__link" href="#">
+            <a class="popup_cart__container__product__images__link" href="../product.html">
               <img class="popup_cart__container__product__images__link__image" src="./images/goods/vinil.png" />
             </a>
           </div>
           <div class="popup_cart__container__product__text">
-            <a class="popup_cart__container__product__text__title" href="#">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм </a>
+            <a class="popup_cart__container__product__text__title" href="../product.html">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм </a>
             <div class="popup_cart__container__product__text__info">
               <div class="popup_cart__container__product__text__info__prices">
                 <span class="popup_cart__container__product__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -364,7 +364,7 @@
               </div>
             </div>
           </div>
-          <a class="popup_cart__container__product__add_to_favourites--added" href="#heart"></a>
+          <span class="popup_cart__container__product__add_to_favourites--added"></span>
         </div>
         <a class="popup_cart__container__button--order button button--pink" href="../cart.html">Перейти в корзину</a>
         <span class="popup_cart__container__button--close  button button--white" onclick="closeDialog()">Остатья в каталоге</span>
@@ -417,7 +417,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images product-slider" id="product-slider-2">
@@ -434,7 +434,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-3">
@@ -451,7 +451,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-4">
@@ -468,7 +468,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
@@ -485,7 +485,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites--added"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
@@ -502,7 +502,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites--added"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
@@ -519,7 +519,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites--added"></span>
               </li>
             </ul>
           <div class="popup_search__suggestions__container__arrows arrows">
@@ -528,7 +528,7 @@
           </div>
         </div>
 
-        <a class="popup_search__container__link_results" href="#">Смотреть все результаты</a>
+        <a class="popup_search__container__link_results" href="../catalogue--level2.html">Смотреть все результаты</a>
       </div>
     </dialog>
     <dialog class="popup_menu popup" aria-label="Меню каталога" id="Menu">
