--- a/catalogue.html
+++ b/catalogue.html
@@ -198,52 +198,52 @@
         <h1>Бытовая техника</h1>
       </section>
       <section class="popular section wrapper--global">
-        <a class="popular__link" href="#">Популярная позиция внутри категории</a>
-        <a class="popular__link" href="#">Популярная позиция внутри категории</a>
-        <a class="popular__link" href="#">Популярная позиция внутри категории</a>
-        <a class="popular__link" href="#">Популярная позиция внутри категории</a>
-        <a class="popular__link" href="#">Популярная позиция внутри категории</a>
+        <a class="popular__link" href="../product.html">Популярная позиция внутри категории</a>
+        <a class="popular__link" href="../product.html">Популярная позиция внутри категории</a>
+        <a class="popular__link" href="../product.html">Популярная позиция внутри категории</a>
+        <a class="popular__link" href="../product.html">Популярная позиция внутри категории</a>
+        <a class="popular__link" href="../product.html">Популярная позиция внутри категории</a>
       </section>
       <section class="categories">
         <ul class="categories__tiles section wrapper--global">
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/girland.png" alt="Гирлянды" />
               <span class="categories__tiles__item__link__text">Гирлянды</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/coffe.png" alt="Кофемашины" />
               <span class="categories__tiles__item__link__text">Кофемашины</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/mixer.png" alt="Миксеры" />
               <span class="categories__tiles__item__link__text">Миксеры</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/vc.png" alt="Пылесосы" />
               <span class="categories__tiles__item__link__text">Пылесосы</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/lamp.png" alt="Светильнки" />
               <span class="categories__tiles__item__link__text">Светильнки</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/scales.png" alt="Умные весы" />
               <span class="categories__tiles__item__link__text">Умные весы</span>
             </a>
           </li>
           <li class="categories__tiles__item">
-            <a class="categories__tiles__item__link" href="#">
+            <a class="categories__tiles__item__link" href="../catalogue--level2.html">
               <img class="categories__tiles__item__link__image" src="./images/catalogue/kettle.png" alt="Чайники" />
               <span class="categories__tiles__item__link__text">Чайники</span>
             </a>
@@ -292,34 +292,34 @@
           <span class="footer__navigation__catalogue__heading footer__heading">Каталог</span>
           <ul class="footer__navigation__catalogue__menu footer__menu">
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Бытовая техника</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Бытовая техника</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Компьютеры и ноутбуки</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Компьютеры и ноутбуки</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Красота и здоровье</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Красота и здоровье</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Аудиотехника</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Аудиотехника</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Аксессуары для гаджетов</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Аксессуары для гаджетов</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Смартфоны и гаджеты</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Смартфоны и гаджеты</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Развлечения и хобби</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Развлечения и хобби</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Телевизоры и аксессуары</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Телевизоры и аксессуары</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Фото и видео</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Фото и видео</a>
             </li>
             <li class="footer__navigation__catalogue__menu__item">
-              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="#">Туризм</a>
+              <a class="footer__navigation__catalogue__menu__item__link footer__menu__link" href="../catalogue.html">Туризм</a>
             </li>
           </ul>
         </div>
@@ -327,16 +327,16 @@
           <span class="footer__navigation__help__heading footer__heading">Помощь</span>
           <ul class="footer__navigation__help__menu footer__menu">
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Доставка</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../delivery.html">Доставка</a>
             </li>
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Самовывоз</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../pickup.html">Самовывоз</a>
             </li>
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Гарантия</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../guarantee.html">Гарантия</a>
             </li>
             <li class="footer__navigation__help__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Контакты</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
@@ -344,13 +344,13 @@
           <span class="footer__navigation__about__heading footer__heading">О нас</span>
           <ul class="footer__navigation__about__menu footer__menu">
             <li class="footer__navigation__about__menu__item">
-              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="#">ТехноЗум</a>
+              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="../about.html">ТехноЗум</a>
             </li>
             <li class="footer__navigation__about__menu__item">
-              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="#">Реквизиты</a>
+              <a class="footer__navigation__about__menu__item__link footer__menu__link" href="../rekvizity.html">Реквизиты</a>
             </li>
             <li class="footer__navigation__about__menu__item">
-              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="#">Оферта</a>
+              <a class="footer__navigation__help__menu__item__link footer__menu__link" href="../oferta.html">Оферта</a>
             </li>
           </ul>
         </div>
@@ -359,7 +359,7 @@
         <div class="footer__credentials__essentials">ИНН 781021149839, ОГРНИП 322784700130448</div>
         <div class="footer__credentials__copyright">Технозум.рф &copy; 2024</div>
         <div class="footer__credentials__link">
-          <a class="footer__credentials__link__policy" href="#">Политика конфиденциальности</a>
+          <a class="footer__credentials__link__policy" href="../oferta.html">Политика конфиденциальности</a>
         </div>
       </div>
     </footer>
@@ -377,12 +377,12 @@
         <span class="popup_cart__container__close icon--close" onclick="closeDialog()"></span>
         <div class="popup_cart__container__product">
           <div class="popup_cart__container__product__images">
-            <a class="popup_cart__container__product__images__link" href="#">
+            <a class="popup_cart__container__product__images__link" href="../product.html">
               <img class="popup_cart__container__product__images__link__image" src="./images/goods/vinil.png" />
             </a>
           </div>
           <div class="popup_cart__container__product__text">
-            <a class="popup_cart__container__product__text__title" href="#">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм </a>
+            <a class="popup_cart__container__product__text__title" href="../product.html">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм </a>
             <div class="popup_cart__container__product__text__info">
               <div class="popup_cart__container__product__text__info__prices">
                 <span class="popup_cart__container__product__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
@@ -390,7 +390,7 @@
               </div>
             </div>
           </div>
-          <a class="popup_cart__container__product__add_to_favourites--added" href="#heart"></a>
+          <span class="popup_cart__container__product__add_to_favourites--added"></span>
         </div>
         <a class="popup_cart__container__button--order button button--pink" href="../cart.html">Перейти в корзину</a>
         <span class="popup_cart__container__button--close  button button--white" onclick="closeDialog()">Остатья в каталоге</span>
@@ -443,7 +443,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images product-slider" id="product-slider-2">
@@ -460,7 +460,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-3">
@@ -477,7 +477,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-4">
@@ -494,7 +494,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
@@ -511,7 +511,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites--added"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
@@ -528,7 +528,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites--added"></span>
               </li>
               <li class="popup_search__suggestions__container__list__item">
                 <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
@@ -545,7 +545,7 @@
                     </div>
                   </div>
                 </div>
-                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+                <span class="popup_search__suggestions__container__list__item__add_to_favourites--added"></span>
               </li>
             </ul>
           <div class="popup_search__suggestions__container__arrows arrows">
@@ -554,7 +554,7 @@
           </div>
         </div>
 
-        <a class="popup_search__container__link_results" href="#">Смотреть все результаты</a>
+        <a class="popup_search__container__link_results" href="../catalogue--level2.html">Смотреть все результаты</a>
       </div>
     </dialog>
     <dialog class="popup_menu popup" aria-label="Меню каталога" id="Menu">
