bugfix - carousel_addon

--- a/product-out-of-stock.html
+++ b/product-out-of-stock.html
@@ -887,7 +887,7 @@
       <section class="suggestions">
         <div class="suggestions__container section wrapper--global">
           <span class="suggestions__container__heading section_heading">С этим товаром часто покупают</span>
-          <ul class="suggestions__container__list carousel_alike">
+          <ul class="suggestions__container__list carousel_addon">
             <li class="suggestions__container__list__item">
               <div class="suggestions__container__list__item__images product-slider">
                 <a class="suggestions__container__list__item__images__link" href="../product.html">
